--- a/Brief-Project/ApiWithJWT/TestApiJWT/appsettings.json
+++ b/Brief-Project/ApiWithJWT/TestApiJWT/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-OA38PF8;Database=WebApiDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=DESKTOP-OA38PF8;Database=ApiDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
